[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecomm-prod-assistant"
version = "0.1.0"
description = "E-commerce production assistant"
authors = [{ name = "Venkatesh" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["prod_assistant"]
include-package-data = true

[tool.setuptools.package-data]
"prod_assistant" = [
    "templates/*",
    "static/*",
    "config/*",
    "notebook/*"
]